@@ -1,5 +1,5 @@
 name             = Dist-Zilla-PluginBundle-Author-CHIM
-version          = 0.050001
+version          = 0.050002
 author           = Anton Gerasimov <chim@cpan.org>
 license          = Perl_5
 copyright_holder = Anton Gerasimov
@@ -8,7 +8,6 @@ main_module      = lib/Dist/Zilla/PluginBundle/Author/CHIM.pm
 
 [@Author::CHIM]
 dist = Dist-Zilla-PluginBundle-Author-CHIM
-
 
 [ModuleShareDirs]
 Dist::Zilla::MintingProfile::Author::CHIM = profiles
