@@ -2,6 +2,9 @@ Revision history for Perl extension Dist::Zilla::PluginBundle::Author::CHIM
 
 {{$NEXT}}
 
+    [ FEATURES ]
+    - added tuning for NextRelease
+
 0.050001 Mon Jul 14 07:15:13 2014 +0000
 
     [ FEATURES ]
